--- a/appspec.yml
+++ b/appspec.yml
@@ -6,4 +6,15 @@ files:
     overwrite: yes
 file_exists_behavior: OVERWRITE
 hooks:
-  
+  Afterinstall:
+    - location: scripts/docker-compose.yml
+      timeout: 120
+      runas: ubuntu
+  ApplicationStop:
+    - location: scripts/stop_container.sh
+      timeout: 60
+      runas: ubuntu
+  ApplicationStart:
+    - location: scripts/start_container.sh
+      timeout: 60
+      runas: ubuntu
