--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -31,5 +31,7 @@ services:
             restart: on-failure
             ports:
                - 3000:3000
+            volumes:
+               - "/home/ubuntu/webpack:/React404/node_modules/react-scripts/config 
             links:
                - team1spring
