--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -32,6 +32,7 @@ services:
             ports:
                - 3000:3000
             volumes:
-               - "/home/ubuntu/webpack:/React404" 
+               - "/home/ubuntu/webpack:/React404/node_modules/react-scripts/config"
+               - "/var/run/docker.sock:/var/run/docker.sock"
             links:
                - team1spring
