--- a/scripts/docker-compose.yml
+++ b/scripts/docker-compose.yml
@@ -32,7 +32,8 @@ services:
             ports:
                - 3000:3000
             volumes:
-               - "/home/ubuntu/webpack:/React404/node_modules/react-scripts/config"
-               - "/var/run/docker.sock:/var/run/docker.sock"
+               - "/home/ubuntu/webpack
+               - "./React404
+
             links:
                - team1spring
