--- a/React_404/cvs-app/Dockerfile
+++ b/React_404/cvs-app/Dockerfile
@@ -2,11 +2,11 @@ FROM node:20-alpine
 
 WORKDIR /React404
 
-COPY package.json .
+COPY package.json ./
 
 RUN npm install
 
-COPY . .
+COPY . ./
 
 EXPOSE 3000
 
