--- a/SpringBoot_404/demo/src/main/resources/application.properties
+++ b/SpringBoot_404/demo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=8080
 
 # Database
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://10.1.36.113:3307/cvs
+spring.datasource.url=jdbc:mariadb://team1-rds.czcksii66kwf.ap-northeast-2.rds.amazonaws.com:3306/cvs
 spring.datasource.username=user
 spring.datasource.password=user
 
