--- a/SpringBoot_404/demo/src/main/resources/application.properties
+++ b/SpringBoot_404/demo/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.port=8080
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.url=jdbc:mariadb://team1-rds.czcksii66kwf.ap-northeast-2.rds.amazonaws.com:3306/cvs
 spring.datasource.username=user
-spring.datasource.password=user
+spring.datasource.password=Busanit_1
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
